# bookCLUB

./: .gitattributes  .gitignore  BUILD.md  CMakeLists.txt  README.md  structure-manifest.txt  worklog.md
UI/: .gitignore  BookClubAuth.pro  CMakeLists.txt  README.md  main.cpp  resources.qrc
UI/assets/qss/: login.qss
UI/include/auth/: AuthManager.h
UI/include/windows/: LoginPage.h  MainWindow.h  RegisterPage.h  ResetPasswordPage.h
UI/src/auth/: AuthManager.cpp
UI/src/windows/: LoginPage.cpp  MainWindow.cpp  RegisterPage.cpp  ResetPasswordPage.cpp
client/: main.cpp
client/controllers/: AdminController.h  AuthController.h  BookCatalogController.h  CartController.h  LibraryController.h  NotificationController.h  PublisherController.h  ReaderController.h  StudySessionController.h
client/forms/: RoleDashboardWindow.ui
client/models/: BookListModel.h  NotificationListModel.h
client/network/: ClientNetworkManager.h
client/qml/: App.qml  Main.qml  NetworkImage.qml
client/resources/: Client_rc.py  client.qrc  fonts.qrc  qml.qrc
client/session/: SessionManager.h
client/ui/: LoginWindow.h  MainWindow.h  ReaderWindow.h  RoleDashboardWindow.h
common/: AppEnums.h  CMakeLists.txt  Constants.h  Result.h
common/Config/: AppConfig.cpp  AppConfig.h
common/Interfaces/: IAuthService.cpp  IAuthService.h  IBookRepository.cpp  IBookRepository.h  IBookService.cpp  IBookService.h  INotificationRepository.cpp  INotificationRepository.h  IOrderRepository.cpp  IOrderRepository.h  IReviewRepository.cpp  IReviewRepository.h  IUserRepository.cpp  IUserRepository.h
common/Models/: Admin.cpp  Admin.h  Book.cpp  Book.h  BookFilter.cpp  BookFilter.h  Cart.cpp  Cart.h  CartItem.cpp  CartItem.h  Discount.cpp  Discount.h  Genre.cpp  Genre.h  LibraryShelf.cpp  LibraryShelf.h  Notification.cpp  Notification.h  Order.cpp  Order.h  Publisher.cpp  Publisher.h  PublisherStats.cpp  PublisherStats.h  RegularUser.cpp  RegularUser.h  Review.cpp  Review.h  SearchQuery.h  ServerHealth.h  StudySession.cpp  StudySession.h  UserAccount.cpp  UserAccount.h  UserLibrary.cpp  UserLibrary.h
common/Network/: Message.cpp  Message.h  PacketParser.cpp  PacketParser.h  Protocol.cpp  Protocol.h  Serializer.cpp  Serializer.h
common/Utils/: CryptoUtils.cpp  CryptoUtils.h  DateTimeUtils.cpp  DateTimeUtils.h  FileSystemUtils.cpp  FileSystemUtils.h  IdGenerator.cpp  IdGenerator.h  Logger.cpp  Logger.h  PasswordHasher.cpp  PasswordHasher.h  ValidationUtils.cpp  ValidationUtils.h
database/: schema.sql
database/migrations/: 001_initial.sql
database/seeds/: sample_data.sql
docs/: ADMIN_README.md  ARCHITECTURE.md  AUTH_MODULE.md  AUTH_README.md  PROJECT_OVERVIEW.md  PUBLISHER_README.md  ROADMAP.md  USER_README.md
docs/UML/: admin-flow.puml  class-diagram.puml  client-sequence-login.puml  client-sequence-purchase.puml  deployment.puml  publisher-flow.puml
installer/linux/: bookclub.desktop  install.sh
installer/windows/: bookclub.nsi  windeployqt.bat
resources/styles/: app.qss
resources/translations/: bookclub_en.ts  bookclub_fa.ts
scripts/: build_linux.sh  e2e_test.py  gen_hash.py
server/: ClientConnection.h  ConnectionManager.h  DatabaseManager.h  NotificationDispatcher.h  RequestHandlerBase.h  RequestRouter.h  ServerApplication.h  ServerCore.h  ServerDashboardWindow.h  StatisticsService.h  StudySessionManager.h  ThreadPool.h  main.cpp
server/handlers/: AdminRequestHandler.h  AuthRequestHandler.h  BookRequestHandler.h  CartRequestHandler.h  LibraryRequestHandler.h  NotificationRequestHandler.h  PublisherRequestHandler.h  StudySessionRequestHandler.h
server/network/: ClientSessionRegistry.cpp  ClientSessionRegistry.h  ServerProtocolHandler.cpp  ServerProtocolHandler.h
server/services/: AdminService.cpp  AdminService.h  AuthService.cpp  AuthService.h  BookService.cpp  BookService.h  CartService.cpp  CartService.h  DiscountService.cpp  DiscountService.h  LibraryService.cpp  LibraryService.h  NotificationService.cpp  NotificationService.h  OrderService.cpp  OrderService.h  PublisherService.cpp  PublisherService.h  ReviewService.cpp  ReviewService.h  SearchService.cpp  SearchService.h  StudySessionService.cpp  StudySessionService.h
src/client/: CMakeLists.txt  main.cpp
src/client/controllers/: AdminController.cpp  AdminController.h  AuthController.cpp  AuthController.h  BookCatalogController.cpp  BookCatalogController.h  CartController.cpp  CartController.h  LibraryController.cpp  LibraryController.h  NotificationController.cpp  NotificationController.h  PublisherController.cpp  PublisherController.h  ReaderController.cpp  ReaderController.h  StudySessionController.cpp  StudySessionController.h
src/client/models/: BookListModel.cpp  NotificationListModel.cpp
src/client/network/: ClientNetworkManag.h  ClientNetworkManager.cpp  ClientNetworkManager.h  SocketManager.cpp  SocketManager.h
src/client/session/: SessionManager.cpp  SessionManager.h
src/client/ui/: LoginWindow.cpp  MainWindow.cpp  ReaderWindow.cpp  RoleDashboardWindow.cpp
src/server/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  ConnectionManager.cpp  ConnectionManager.h  DatabaseManager.cpp  DatabaseManager.h  NotificationDispatcher.cpp  NotificationDispatcher.h  RequestHandlerBase.cpp  RequestHandlerBase.h  RequestRouter.cpp  RequestRouter.h  ServerApplication.cpp  ServerApplication.h  ServerCore.cpp  ServerCore.h  ServerDashboardWindow.cpp  ServerDashboardWindow.h  StatisticsService.cpp  StatisticsService.h  StudySessionManager.cpp  StudySessionManager.h  ThreadPool.cpp  ThreadPool.h  main.cpp
src/server/handlers/: AdminRequestHandler.cpp  AdminRequestHandler.h  AuthRequestHandler.cpp  AuthRequestHandler.h  BookRequestHandle.h  BookRequestHandler.cpp  BookRequestHandler.h  CartRequestHandler.cpp  CartRequestHandler.h  LibraryRequestHandler.cpp  LibraryRequestHandler.h  NotificationRequestHandler.cpp  NotificationRequestHandler.h  PublisherRequestHandler.cpp  PublisherRequestHandler.h  StudySessionRequestHandler.cpp  StudySessionRequestHandler.h
tests/: CMakeLists.txt
tests/server/: test_auth.cpp
(+228 files in other folders)
